--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/features/*"],
+      "@core/*": ["src/core/*"]
+    },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   }
