--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -19,6 +19,7 @@ pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 pyOpenSSL==24.1.0
+python-decouple==3.8
 redis==5.0.6
 service-identity==24.1.0
 setuptools==70.1.0
