--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -11,6 +11,7 @@ daphne==4.1.2
 Django==5.0.6
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
+gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
@@ -29,4 +30,6 @@ sqlparse==0.5.0
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.12.2
+uvicorn==0.30.6
+websockets==13.0
 zope.interface==6.4.post2
