--- a/Config/docker/docker-composeprod.yml
+++ b/Config/docker/docker-composeprod.yml
@@ -1,44 +1,6 @@
 version: "3.8"
 
 services:
-  frontend:
-    
-    build:
-      context: ./Frontend
-      dockerfile: Dockerfile
-
-    ports:
-      - "3000:3000"
-    
-    volumes:
-      - ./Frontend:/home/web
-
-    networks:
-      - estudio-network
-
-  backend:
-
-    build:
-      context: ./Backend
-      dockerfile: Dockerfile
-
-    ports:
-      - "8088:8088"
-    
-    volumes:
-      - ./Backend/sources:/home/web/sources
-
-    networks:
-      - estudio-network
-
-  redis:
-    image: redis:latest
-    container_name: redis-server
-    ports:
-      - "6379:6379"
-    networks:
-      - estudio-network
-
   mysql:
     image: mysql:latest
     container_name: mysql-server
@@ -46,20 +8,48 @@ services:
       - "3306:3306"
 
     environment:
-      MYSQL_ROOT_PASSWORD: ...
+      MYSQL_ROOT_PASSWORD: dev
       MYSQL_DATABASE: db_estudioad
       MYSQL_USER: estudioad
-      MYSQL_PASSWORD: ...
+      MYSQL_PASSWORD: dev
 
     volumes:
       - mysqldata:/var/lib/mysql
       - ./Config/init-db:/docker-entrypoint-initdb.d
     
     networks:
-      - estudio-network
+      - dev-network
+      
+  redis:
+    image: redis:latest
+    container_name: redis-server
+    ports:
+      - "6379:6379"
+    networks:
+      - dev-network
+
+  backend:
+
+    build:
+      context: ./Backend
+      dockerfile: Dockerfile
+    environment:
+      - DJANGO_SETTINGS_MODULE=project.settings 
+    depends_on:
+      - mysql
+      - redis
+
+    ports:
+      - "8000:8000"
+    
+    volumes:
+      - ./Backend/sources:/home/web/sources
+
+    networks:
+      - dev-network
 
 networks:
-  estudio-network:
+  dev-network:
     driver: bridge
 
 volumes:
