--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,6 @@
 version: "3.8"
 
 services:
-  frontend:
-    
-    build:
-      context: ./Frontend
-      dockerfile: Dockerfile
-
-    ports:
-      - "3000:3000"
-    
-    volumes:
-      - ./Frontend:/home/web
-
-    networks:
-      - dev-network
-
-  backend:
-
-    build:
-      context: ./Backend
-      dockerfile: Dockerfile
-
-    ports:
-      - "8088:8088"
-    
-    volumes:
-      - ./Backend/sources:/home/web/sources
-
-    networks:
-      - dev-network
-
-  redis:
-    image: redis:latest
-    container_name: redis-server
-    ports:
-      - "6379:6379"
-    networks:
-      - dev-network
-
   mysql:
     image: mysql:latest
     container_name: mysql-server
@@ -55,6 +17,34 @@ services:
       - mysqldata:/var/lib/mysql
       - ./Config/init-db:/docker-entrypoint-initdb.d
     
+    networks:
+      - dev-network
+      
+  redis:
+    image: redis:latest
+    container_name: redis-server
+    ports:
+      - "6379:6379"
+    networks:
+      - dev-network
+
+  backend:
+
+    build:
+      context: ./Backend
+      dockerfile: Dockerfile
+    environment:
+      - DJANGO_SETTINGS_MODULE=project.settings  # Ajusta esto según la ubicación de tu configuración
+    depends_on:
+      - mysql
+      - redis
+
+    ports:
+      - "8000:8000"
+    
+    volumes:
+      - ./Backend/sources:/home/web/sources
+
     networks:
       - dev-network
 
