--- a/Config/nginx/prod_nginx.conf
+++ b/Config/nginx/prod_nginx.conf
@@ -16,6 +16,12 @@ server{
     listen 443 ssl;
     server_name www.estudiojuridicoad.com estudiojuridicoad.com;
 
+    ssl on;
+
+    ssl_certificate /path/to/server.crt;
+    ssl_certificate_key /path/to/server.key;
+
+
     location / {
         root /home/gusmoon/projects/legalStudy_Web/www/;
         try_files $uri $uri/ /index.html;   
